# micro_blockchain

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/chain/: blockchain.rs  mempool.rs  mod.rs
src/cli/: commands.rs
src/consensus/: mod.rs  pow.rs  validation.rs
src/crypto/: address.rs  hash.rs  keys.rs  mnemonic.rs  mod.rs
src/network/: mod.rs  peer.rs  protocol.rs  server.rs  sync_manager.rs
src/storage/: db.rs
src/tui/: app.rs  event.rs  ui.rs
src/types/: block.rs  transaction.rs
src/wallet/: builder.rs  mod.rs  wallet.rs
tests/: integration.rs
